[+] Added a bunch of improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Fenix</string>
     <string name="placeholder_url">https://jsonplaceholder.typicode.com/</string>
+    <string name="unexpected_error">Unexpected error occurred</string>
 </resources>
